cli/tests/snapshot/inputs/errors/let_block_duplicate_identifier.ncl
# capture = 'stderr'
# command = ['eval']
let
  { x, y } = { x = 1, y = 2 },
  x = 3
in
  x
